--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,1 +1,7 @@
-
+{% extends "base.html" %}
+{% block content %}
+<h1>{{ data.title }}</h1>
+<p>Total ürün: {{ data.total_products }}</p>
+<p>Düşük stok: {{ data.low_stock }}</p>
+<p>Son senkron: {{ data.last_sync }}</p>
+{% endblock %}
