--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -219,6 +219,7 @@ button.btn-save:hover {
     </div>
 
     <!-- TABLE -->
+<div class="table-container">
     <table id="productsTable">
         <thead>
             <tr>
@@ -232,7 +233,7 @@ button.btn-save:hover {
         <tbody id="product-table">
         </tbody>
     </table>
-
+</div>
     <!-- PAGINATION -->
     <div style="margin-top:20px; display:flex; gap:10px; align-items:center;">
         <button onclick="prevPage()" style="padding:6px 12px;">⬅ Önceki</button>
